syntax = "proto3";

package user;

service AuthService {
    rpc ParseBearerToken(ParseBearerTokenRequest) returns (ParseBearerTokenResponse);
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc SignInWithKakaoAuthCode (SignInWithKakaoAuthCodeRequest) returns (SignInWithKakaoAuthCodeResponse);
    rpc SignInWithKakaoUserInfo (SignInWithKakaoUserInfoRequest) returns (SignInWithKakaoUserInfoResponse);
}

message ParseBearerTokenRequest{
    string token = 1;
}

message ParseBearerTokenResponse{
    string sub = 1;
}

message RegisterUserRequest {
    string token = 1;
    string name = 2;
    int32 age = 3;
    string profile = 4;
}

message RegisterUserResponse {
    string id = 1;
    string email = 2;
    string name = 3;
    int32 age = 4;
    string profile = 5;
}

message LoginUserRequest {
    string token = 1;
}

message LoginUserResponse {
    string refreshToken = 1;
    string accessToken = 2;
}

message DeleteUserRequest {
  string token = 1;
  string email = 2;
  string password = 3;
}
message DeleteUserResponse {
  string message = 1;
}

// 클라이언트가 카카오 인증 코드(code)를 제공
message SignInWithKakaoAuthCodeRequest {
  string code = 1;
}

// 카카오에서 반환된 사용자 정보
message SignInWithKakaoAuthCodeResponse {
    string refreshToken = 1;
    string accessToken = 2;
//   string uid = 1;
//   string email = 2;
//   string nickname = 3;
//   string profile_image = 4;
}

message SignInWithKakaoUserInfoRequest {
    message Profile {
        string nickname = 1;        
    }
    message KakaoAccount {
        Profile profile = 1;
        string email = 2;
    }
    
    int64 id = 1;
    KakaoAccount kakao_account = 2;
}

message SignInWithKakaoUserInfoResponse {
    string refreshToken = 1;
    string accessToken = 2;
}


service UserService {
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
    string userId = 1;
}

message GetUserInfoResponse {
    string id = 1;
    string email = 2;
    string name = 3;
    int32 age = 4;
    string profile = 5;
}